tests/sksl/errors/ReservedNameThis.glsl
### Compilation failed:

error: 1: 'this' is a reserved word
int this;
    ^^^^
1 error
